# cmake-study

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  func.cpp  func.h
src/: CMakeLists.txt  main.cpp
